--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,6 +1,6 @@
 name: Node CI
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
@@ -8,6 +8,6 @@ jobs:
 
     steps:
     - name: Some test action 12345
-      uses: icew1nd/some-test-action-12345@v.1.0.2
+      uses: icew1nd/some-test-action-12345@v.1.0.3
       with:
         who-to-greet: 'Mona the Octocat'
