--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Some test action 12345
-
         uses: ./.github/actions/my-action
         with:
           who-to-greet: "Mona the Octocat"
