--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,6 +7,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+     - name: deploy now
+        env:
+          ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
+        run: now --no-clipboard -t ${ZEIT_TOKEN} -m commit=${GITHUB_SHA} -m branch=${GITHUB_REF}
+      - uses: iam4x/now-deploy-preview-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN }}
       - name: GitHub Action for Slack
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
