--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "personal",
+  "name": "delete-me",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://icew1nd.github.io/thomasrasmussen.dev",
+  "homepage": ".",
   "dependencies": {
-    "@actions/core": "^1.2.0",
-    "@actions/github": "^1.1.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
-    "react-social-icons": "^4.1.0",
-    "react-typeout": "^1.0.0",
-    "throttle-debounce": "^2.1.0",
-    "trianglify": "^2.0.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,8 +28,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
   }
 }
