--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -5,12 +5,24 @@ on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+  
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
 
     steps:
-      - name: ESLint checks
-        uses: gimenete/eslint-action@1.0
-      - name: Run Jest
-        uses: stefanoeb/jest-action@1.0.0
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install, build, and test
+        run: |
+          npm ci
+          npm run build --if-present
+          npm test
+        env:
+          CI: true
       - name: GitHub Action for Slack
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
